add build artifacts to package

--- a/src/k2/assignmentManager/CMakeLists.txt
+++ b/src/k2/assignmentManager/CMakeLists.txt
@@ -3,3 +3,6 @@ file(GLOB SOURCES "*.cpp")
 
 add_library(k2assignment_manager STATIC ${HEADERS} ${SOURCES})
 target_link_libraries (k2assignment_manager PRIVATE k2common k2transport Seastar::seastar k2dto k2partition_manager)
+
+install(TARGETS k2assignment_manager DESTINATION lib/k2)
+install(FILES ${HEADERS} DESTINATION include/k2/assignmentManager)
