--- a/src/k2/collectionMetadataCache/CMakeLists.txt
+++ b/src/k2/collectionMetadataCache/CMakeLists.txt
@@ -3,3 +3,6 @@ file(GLOB SOURCES "*.cpp")
 
 add_library(k2collection_metadata_cache STATIC ${HEADERS} ${SOURCES})
 target_link_libraries (k2collection_metadata_cache PRIVATE k2common k2transport Seastar::seastar k2dto)
+
+install(TARGETS k2collection_metadata_cache DESTINATION lib/k2)
+install(FILES ${HEADERS} DESTINATION include/k2/collectionMetadataCache)
