--- a/src/k2/common/CMakeLists.txt
+++ b/src/k2/common/CMakeLists.txt
@@ -8,3 +8,6 @@ set_target_properties(k2common PROPERTIES
 	SOVERSION 1
 )
 target_link_libraries (k2common PRIVATE Seastar::seastar )
+
+install(TARGETS k2common DESTINATION lib/k2)
+install(FILES ${HEADERS} DESTINATION include/k2/common)
