--- a/src/k2/config/CMakeLists.txt
+++ b/src/k2/config/CMakeLists.txt
@@ -11,3 +11,6 @@ set_target_properties(k2config PROPERTIES
 )
 
 target_link_libraries (k2config PRIVATE k2common)
+
+install(TARGETS k2config DESTINATION lib/k2)
+install(FILES ${HEADERS} DESTINATION include/k2/config)
