--- a/src/k2/persistence/service/CMakeLists.txt
+++ b/src/k2/persistence/service/CMakeLists.txt
@@ -9,3 +9,6 @@ set_target_properties(k2persistence_service PROPERTIES
 )
 
 target_link_libraries (k2persistence_service PRIVATE k2common k2transport Seastar::seastar )
+
+install(TARGETS k2persistence_service DESTINATION lib/k2)
+install(FILES ${HEADERS} DESTINATION include/k2/persistence/service)
