--- a/test/k23si/CMakeLists.txt
+++ b/test/k23si/CMakeLists.txt
@@ -1,6 +1,9 @@
-add_executable (k23si_test K23SITest.cpp)
-add_executable (read_cache_test ReadCacheTest.cpp)
-add_executable (skv_record_test SKVRecordTest.cpp)
+file(GLOB HEADERS "*.h")
+file(GLOB SOURCES "*.cpp")
+
+add_executable (k23si_test ${HEADERS} K23SITest.cpp)
+add_executable (read_cache_test ${HEADERS} ReadCacheTest.cpp)
+add_executable (skv_record_test ${HEADERS} SKVRecordTest.cpp)
 
 target_link_libraries (k23si_test PRIVATE k2appbase Seastar::seastar k23si)
 target_link_libraries (read_cache_test PRIVATE k23si)
