--- a/test/persistentVolume/CMakeLists.txt
+++ b/test/persistentVolume/CMakeLists.txt
@@ -1,4 +1,7 @@
-add_executable (persistent_volume_test Main.cpp PersistentVolumeTest.cpp)
+file(GLOB HEADERS "*.h")
+file(GLOB SOURCES "*.cpp")
+
+add_executable (persistent_volume_test ${HEADERS} ${SOURCES})
 
 target_link_libraries (persistent_volume_test PRIVATE seastar_testing boost_unit_test_framework k2persistence k2plog k2common k2persistence stdc++fs Seastar::seastar)
 
