--- a/test/transport/CMakeLists.txt
+++ b/test/transport/CMakeLists.txt
@@ -1,4 +1,7 @@
-add_executable (payload_test PayloadTest.cpp)
+file(GLOB HEADERS "*.h")
+file(GLOB SOURCES "*.cpp")
+
+add_executable (payload_test ${HEADERS} ${SOURCES})
 
 target_link_libraries (payload_test PRIVATE k2transport)
 add_test(NAME transport COMMAND payload_test)
