--- a/src/k2/cmd/tpcc/mock/CMakeLists.txt
+++ b/src/k2/cmd/tpcc/mock/CMakeLists.txt
@@ -1,4 +1,7 @@
-add_executable (mock_server mock_server.cpp)
+file(GLOB HEADERS "*.h")
+file(GLOB SOURCES "*.cpp")
+
+add_executable (mock_server ${HEADERS} ${SOURCES})
 
 target_link_libraries (mock_server PRIVATE k2appbase k2transport k2common Seastar::seastar)
 
