--- a/src/k2/nodePoolMonitor/CMakeLists.txt
+++ b/src/k2/nodePoolMonitor/CMakeLists.txt
@@ -3,3 +3,6 @@ file(GLOB SOURCES "*.cpp")
 
 add_library(k2node_pool_monitor STATIC ${HEADERS} ${SOURCES})
 target_link_libraries (k2node_pool_monitor PRIVATE k2common k2transport Seastar::seastar k2dto)
+
+install(TARGETS k2node_pool_monitor DESTINATION lib/k2)
+install(FILES ${HEADERS} DESTINATION include/k2/nodePoolMonitor)
