--- a/test/plogmock/CMakeLists.txt
+++ b/test/plogmock/CMakeLists.txt
@@ -1,4 +1,7 @@
-add_executable (plogmock_test Main.cpp PlogMockTest.cpp)
+file(GLOB HEADERS "*.h")
+file(GLOB SOURCES "*.cpp")
+
+add_executable (plogmock_test ${HEADERS} ${SOURCES})
 
 target_link_libraries (plogmock_test PRIVATE seastar_testing boost_unit_test_framework k2plog k2transport stdc++fs k2common Seastar::seastar)
 
