--- a/src/k2/cmd/controlPlaneOracle/CMakeLists.txt
+++ b/src/k2/cmd/controlPlaneOracle/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable (cpo_main cpo_main.cpp)
 
-target_link_libraries (cpo_main PRIVATE k2appbase k2common k2transport Seastar::seastar k2cpo_service)
+target_link_libraries (cpo_main PRIVATE appbase common transport Seastar::seastar cpo_service)
 
 install (TARGETS cpo_main DESTINATION bin)
