--- a/src/k2/tso/client/CMakeLists.txt
+++ b/src/k2/tso/client/CMakeLists.txt
@@ -1,14 +1,12 @@
 file(GLOB HEADERS "*.h")
 file(GLOB SOURCES "*.cpp")
 
-add_library(k2tso_client STATIC ${HEADERS} ${SOURCES})
+add_library(tso_client STATIC ${HEADERS} ${SOURCES})
 
-set_target_properties(k2tso_client PROPERTIES
-	VERSION ${PROJECT_VERSION}
-	SOVERSION 1
-)
+target_link_libraries (tso_client PRIVATE appbase dto config common transport Seastar::seastar)
 
-target_link_libraries (k2tso_client PRIVATE k2appbase k2dto k2config k2common k2transport Seastar::seastar)
-
-install(TARGETS k2tso_client DESTINATION lib/k2)
+# export the library in the common k2Targets
+install(TARGETS tso_client EXPORT k2targets DESTINATION lib/k2)
 install(FILES ${HEADERS} DESTINATION include/k2/tso/client)
+# export the cmake config in the build tree for any users who want to use this project from source
+export(TARGETS tso_client NAMESPACE k2:: FILE tso_client-config.cmake)
