--- a/test/transport/CMakeLists.txt
+++ b/test/transport/CMakeLists.txt
@@ -3,5 +3,5 @@ file(GLOB SOURCES "*.cpp")
 
 add_executable (payload_test ${HEADERS} ${SOURCES})
 
-target_link_libraries (payload_test PRIVATE k2transport)
+target_link_libraries (payload_test PRIVATE transport)
 add_test(NAME transport COMMAND payload_test)
