--- a/src/k2/cmd/tpcc/mock/CMakeLists.txt
+++ b/src/k2/cmd/tpcc/mock/CMakeLists.txt
@@ -3,6 +3,6 @@ file(GLOB SOURCES "*.cpp")
 
 add_executable (mock_server ${HEADERS} ${SOURCES})
 
-target_link_libraries (mock_server PRIVATE k2appbase k2transport k2common Seastar::seastar)
+target_link_libraries (mock_server PRIVATE appbase transport common Seastar::seastar)
 
 install (TARGETS mock_server DESTINATION bin)
