--- a/src/k2/config/CMakeLists.txt
+++ b/src/k2/config/CMakeLists.txt
@@ -1,16 +1,17 @@
-project(k2client VERSION 1.0.0 DESCRIPTION "k2 configuration")
-
 file(GLOB HEADERS "*.h")
 file(GLOB SOURCES "*.cpp")
 
-add_library(k2config STATIC ${HEADERS} ${SOURCES})
+add_library(config STATIC ${HEADERS} ${SOURCES})
 
-set_target_properties(k2config PROPERTIES
+set_target_properties(config PROPERTIES
 	VERSION ${PROJECT_VERSION}
 	SOVERSION 1
 )
 
-target_link_libraries (k2config PRIVATE k2common)
+target_link_libraries (config PRIVATE common)
 
-install(TARGETS k2config DESTINATION lib/k2)
+# export the library in the common k2Targets
+install(TARGETS config EXPORT k2Targets DESTINATION lib/k2)
 install(FILES ${HEADERS} DESTINATION include/k2/config)
+# export the cmake config in the build tree for any users who want to use this project from source
+export(TARGETS config NAMESPACE k2:: FILE config-config.cmake)
