--- a/src/k2/module/k23si/CMakeLists.txt
+++ b/src/k2/module/k23si/CMakeLists.txt
@@ -2,8 +2,11 @@ file(GLOB HEADERS "*.h")
 file(GLOB SOURCES "*.cpp")
 
 add_library(k23si STATIC ${HEADERS} ${SOURCES})
-target_link_libraries (k23si PRIVATE k2indexer k2common k2transport k2dto k2cpo_client)
+target_link_libraries (k23si PRIVATE indexer common transport dto cpo_client)
 add_subdirectory (client)
 
-install(TARGETS k23si DESTINATION lib/k2)
+# export the library in the common k2Targets
+install(TARGETS k23si EXPORT k2Targets DESTINATION lib/k2)
 install(FILES ${HEADERS} DESTINATION include/k2/module/k23si)
+# export the cmake config in the build tree for any users who want to use this project from source
+export(TARGETS k23si NAMESPACE k2:: FILE k23si-config.cmake)
