--- a/src/k2/persistence/plog/CMakeLists.txt
+++ b/src/k2/persistence/plog/CMakeLists.txt
@@ -1,8 +1,11 @@
 file(GLOB HEADERS "*.h")
 file(GLOB SOURCES "*.cpp")
 
-add_library(k2plog STATIC ${HEADERS} ${SOURCES})
-target_link_libraries (k2plog PRIVATE k2transport k2common)
+add_library(plog STATIC ${HEADERS} ${SOURCES})
+target_link_libraries (plog PRIVATE transport common)
 
-install(TARGETS k2plog DESTINATION lib/k2)
+# export the library in the common k2Targets
+install(TARGETS plog EXPORT k2Targets DESTINATION lib/k2)
 install(FILES ${HEADERS} DESTINATION include/k2/persistence/plog)
+# export the cmake config in the build tree for any users who want to use this project from source
+export(TARGETS plog NAMESPACE k2:: FILE plog-config.cmake)
