--- a/src/k2/tso/service/CMakeLists.txt
+++ b/src/k2/tso/service/CMakeLists.txt
@@ -1,15 +1,9 @@
 file(GLOB HEADERS "*.h")
 file(GLOB SOURCES "*.cpp")
 
-add_library (k2tso_service STATIC ${HEADERS} ${SOURCES})
+add_library (tso_service STATIC ${HEADERS} ${SOURCES})
 
-set_target_properties(k2tso_service PROPERTIES
-	VERSION ${PROJECT_VERSION}
-	SOVERSION 1)
+target_link_libraries (tso_service PRIVATE appbase common dto transport Seastar::seastar)
 
-target_link_libraries (k2tso_service PRIVATE k2appbase k2common k2dto k2transport Seastar::seastar)
-
-install(TARGETS k2tso_service DESTINATION lib/k2)
+install(TARGETS tso_service DESTINATION lib/k2)
 install(FILES ${HEADERS} DESTINATION include/k2/tso/service)
-
-
