--- a/test/cpo/CMakeLists.txt
+++ b/test/cpo/CMakeLists.txt
@@ -3,4 +3,4 @@ file(GLOB SOURCES "*.cpp")
 
 add_executable (cpo_test ${HEADERS} ${SOURCES})
 
-target_link_libraries (cpo_test PRIVATE k2appbase Seastar::seastar k2dto)
+target_link_libraries (cpo_test PRIVATE appbase Seastar::seastar dto)
