--- a/test/k23si/CMakeLists.txt
+++ b/test/k23si/CMakeLists.txt
@@ -6,10 +6,10 @@ add_executable (read_cache_test ${HEADERS} ReadCacheTest.cpp)
 add_executable (skv_record_test ${HEADERS} SKVRecordTest.cpp)
 add_executable (key_encoding_test ${HEADERS} KeyEncodingTest.cpp)
 
-target_link_libraries (k23si_test PRIVATE k2appbase Seastar::seastar k23si)
+target_link_libraries (k23si_test PRIVATE appbase Seastar::seastar k23si)
 target_link_libraries (read_cache_test PRIVATE k23si)
-target_link_libraries (skv_record_test PRIVATE k2dto k2transport)
-target_link_libraries (key_encoding_test PRIVATE k2dto k2transport)
+target_link_libraries (skv_record_test PRIVATE dto transport)
+target_link_libraries (key_encoding_test PRIVATE dto transport)
 
 add_test(NAME readcache COMMAND read_cache_test)
 add_test(NAME skv_record COMMAND skv_record_test)
