debug the payload in plog

--- a/src/k2/persistence/plog/CMakeLists.txt
+++ b/src/k2/persistence/plog/CMakeLists.txt
@@ -2,4 +2,4 @@ file(GLOB HEADERS "*.h")
 file(GLOB SOURCES "*.cpp")
 
 add_library(k2plog STATIC ${HEADERS} ${SOURCES})
-target_link_libraries (k2plog PRIVATE k2transport k2common)
+target_link_libraries (k2plog PRIVATE k2transport k2common k2cpo_client k2dto)
