--- a/src/k2/cmd/demo/CMakeLists.txt
+++ b/src/k2/cmd/demo/CMakeLists.txt
@@ -1,11 +1,15 @@
 add_executable (service service.cpp)
 add_executable (rpc_echo rpc_echo.cpp)
 add_executable (rpc_service rpc_service.cpp)
+add_executable (plog_test plog_test.cpp)
+add_executable (plog_client plog_client.cpp)
 add_executable (tso_sample_app tso_sample_app.cpp)
 add_executable (txn_client_demo txn_client_demo.cpp)
 
 target_link_libraries (service PRIVATE k2appbase k2transport k2common Seastar::seastar)
 target_link_libraries (rpc_echo PRIVATE k2appbase k2transport k2common Seastar::seastar)
 target_link_libraries (rpc_service PRIVATE k2appbase k2transport k2common Seastar::seastar)
+target_link_libraries (plog_test PRIVATE k2appbase k2transport k2common k2plog k2dto Seastar::seastar)
+target_link_libraries (plog_client PRIVATE k2appbase k2transport k2common k2plog k2dto Seastar::seastar)
 target_link_libraries (tso_sample_app PRIVATE tso_service tso_clientlib k2appbase k2transport k2common Seastar::seastar)
 target_link_libraries (txn_client_demo PRIVATE k2common Seastar::seastar)
