--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory (plogmock)
 add_subdirectory (persistentVolume)
 add_subdirectory (transport)
 add_subdirectory (k23si)
+add_subdirectory (plog)
