--- a/test/plog/CMakeLists.txt
+++ b/test/plog/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable (plog_test Main.cpp PlogTest.cpp PlogTest.h)
 
-target_link_libraries (plog_test PRIVATE k2appbase k2transport k2common k2plog Seastar::seastar k2dto)
+target_link_libraries (plog_test PRIVATE appbase transport common plog Seastar::seastar dto)
