added partition cluster registration and get support

--- a/src/k2/cmd/CMakeLists.txt
+++ b/src/k2/cmd/CMakeLists.txt
@@ -3,5 +3,6 @@ add_subdirectory(tpcc)
 add_subdirectory(controlPlaneOracle)
 add_subdirectory(nodepool)
 add_subdirectory(persistence)
+add_subdirectory(plog)
 add_subdirectory(txbench)
 add_subdirectory(tso)
