--- a/src/k2/persistence/CMakeLists.txt
+++ b/src/k2/persistence/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_subdirectory (plog)
 add_subdirectory (persistentVolume)
 add_subdirectory (service)
+add_subdirectory (plog_service)
+add_subdirectory (plog_client)
