Rebase from master, some debug work needed

--- a/test/k23si/CMakeLists.txt
+++ b/test/k23si/CMakeLists.txt
@@ -7,6 +7,7 @@ add_executable (skv_record_test ${HEADERS} SKVRecordTest.cpp)
 add_executable (key_encoding_test ${HEADERS} KeyEncodingTest.cpp)
 add_executable (schema_creation_test ${HEADERS} SchemaCreationTest.cpp)
 add_executable (skv_ser_test ${HEADERS} SKVSerTest.cpp)
+add_executable (3si_txn_test ${HEADERS} 3SITxnTest.cpp)
 
 target_link_libraries (k23si_test PRIVATE appbase Seastar::seastar k23si)
 target_link_libraries (read_cache_test PRIVATE k23si)
@@ -14,6 +15,7 @@ target_link_libraries (skv_record_test PRIVATE dto transport)
 target_link_libraries (key_encoding_test PRIVATE dto transport)
 target_link_libraries (schema_creation_test PRIVATE appbase Seastar::seastar dto)
 target_link_libraries (skv_ser_test PRIVATE dto transport)
+target_link_libraries (3si_txn_test PRIVATE appbase dto transport Seastar::seastar)
 
 add_test(NAME readcache COMMAND read_cache_test)
 add_test(NAME skv_record COMMAND skv_record_test)
