Flexibility improvements to the cluster runner scripts

--- a/cluster/configs/cpo.cfg
+++ b/cluster/configs/cpo.cfg
@@ -1,5 +1,5 @@
 [deployment]
-image = ${CPO_IMAGE}
+image = ${LocalConfig:CPO_IMAGE}
 binary = ./cpo_main
 
 [program_args]
@@ -7,5 +7,5 @@ tcp_endpoints = 7000
 data_dir = ./
 memory = 1G
 cpuset = 1
-heartbeat_deadline = 600s
+heartbeat_deadline = 1s
 assignment_timeout = 10s
