--- a/cluster/configs/k2_server.cfg
+++ b/cluster/configs/k2_server.cfg
@@ -1,12 +1,13 @@
 [deployment]
-image = ${K2_SERVER_IMAGE}
+image = ${LocalConfig:SERVER_IMAGE}
 binary = ./nodepool
 
 [program_args]
 k23si_cpo_endpoint = auto-rrdma+k2rpc://192.168.1.8:7000
-k23si_persistence_endpoint = auto-rrdma+k2rpc://192.168.1.10:4000
-tcp_endpoints = tcp+k2rpc://192.168.1.4:10000
+k23si_persistence_endpoints = auto-rrdma+k2rpc://192.168.1.10:4000 auto-rrdma+k2rpc://192.168.1.10:4001 auto-rrdma+k2rpc://192.168.1.10:4002 auto-rrdma+k2rpc://192.168.1.10:4003
+tcp_endpoints = tcp+k2rpc://192.168.1.4:10000 tcp+k2rpc://192.168.1.4:10001 tcp+k2rpc://192.168.1.4:10002 tcp+k2rpc://192.168.1.4:10003
+tso_endpoint = auto-rrdma+k2rpc://192.168.1.8:8000
 memory = 30G
-partition_request_timeout = 1s
+partition_request_timeout = 10s
 cpo_request_timeout = 5s
 cpo_request_backoff = 1s
