--- a/cluster/configs/persist.cfg
+++ b/cluster/configs/persist.cfg
@@ -1,7 +1,7 @@
 [deployment]
-image = ${PERSISTENCE_IMAGE}
+image = ${LocalConfig:PERSIST_IMAGE}
 binary = ./persistence
 
 [program_args]
-tcp_endpoints = tcp+k2rpc://192.168.1.10:4000
-memory = 10G
+tcp_endpoints = tcp+k2rpc://192.168.1.10:4000 tcp+k2rpc://192.168.1.10:4001 tcp+k2rpc://192.168.1.10:4002 tcp+k2rpc://192.168.1.10:4003 tcp+k2rpc://192.168.1.10:4004 tcp+k2rpc://192.168.1.10:4005 tcp+k2rpc://192.168.1.10:4006 tcp+k2rpc://192.168.1.10:4007
+memory = 20G
