--- a/cluster/configs/tso.cfg
+++ b/cluster/configs/tso.cfg
@@ -1,7 +1,7 @@
 [deployment]
-image = ${TSO_IMAGE}
+image = ${LocalConfig:TSO_IMAGE}
 binary = ./tso
 
 [program_args]
 tcp_endpoints = tcp+k2rpc://192.168.1.8:8000 tcp+k2rpc://192.168.1.8:8001
-memory = 10G
+memory = 2G
