--- a/cluster/configs/tpcc_client.cfg
+++ b/cluster/configs/tpcc_client.cfg
@@ -1,16 +1,17 @@
 [deployment]
-image = ${TPCC_IMAGE}
+image = ${LocalConfig:CLIENT_IMAGE}
 binary = ./tpcc_client
 
 [program_args]
-test_duration_s = 30
-tcp_remotes = tcp+k2rpc://192.168.1.4:10000
+test_duration_s = 150
+tcp_remotes = tcp+k2rpc://192.168.1.4:10000 tcp+k2rpc://192.168.1.4:10001
 cpo = auto-rrdma+k2rpc://192.168.1.8:7000
 tso_endpoint = auto-rrdma+k2rpc://192.168.1.8:8000
-memory = 10G
+memory = 30G
 partition_request_timeout = 1s
 cpo_request_timeout = 5s
 cpo_request_backoff = 1s
 data_load = false
-num_warehouses = 2
-clients_per_core = 1
+num_warehouses = 12
+num_concurrent_txns = 1
+do_verification = false
