--- a/cluster/configs/txnbench.cfg
+++ b/cluster/configs/txnbench.cfg
@@ -1,18 +1,20 @@
 [deployment]
 image = ${LocalConfig:CLIENT_IMAGE}
-binary = ./tpcc_client
+binary = ./k23sibench_client
 
 [program_args]
-test_duration_s = 30
+test_duration = 120s
+#tcp_remotes = tcp+k2rpc://192.168.1.4:10000 tcp+k2rpc://192.168.1.2:10000 tcp+k2rpc://192.168.1.4:10001 tcp+k2rpc://192.168.1.2:10001
 tcp_remotes = tcp+k2rpc://192.168.1.4:10000 tcp+k2rpc://192.168.1.4:10001 tcp+k2rpc://192.168.1.4:10002 tcp+k2rpc://192.168.1.4:10003 tcp+k2rpc://192.168.1.2:10000 tcp+k2rpc://192.168.1.2:10001 tcp+k2rpc://192.168.1.2:10002 tcp+k2rpc://192.168.1.2:10003 
 #tcp_remotes = tcp+k2rpc://192.168.1.4:10000
 cpo = auto-rrdma+k2rpc://192.168.1.8:7000
 tso_endpoint = auto-rrdma+k2rpc://192.168.1.8:8000
 memory = 30G
-partition_request_timeout = 20s
+partition_request_timeout = 1s
 cpo_request_timeout = 5s
 cpo_request_backoff = 1s
-data_load = true
-num_warehouses = 12
-num_concurrent_txns = 1
-do_verification = false
+pipeline_depth = 1
+txn_timeout = 1s
+reads = 1
+writes = 2
+sync_finalize = false
