--- a/test/k23si/CMakeLists.txt
+++ b/test/k23si/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable (key_encoding_test ${HEADERS} KeyEncodingTest.cpp)
 add_executable (schema_creation_test ${HEADERS} SchemaCreationTest.cpp)
 add_executable (skv_ser_test ${HEADERS} SKVSerTest.cpp)
 add_executable (3si_txn_test ${HEADERS} 3SITxnTest.cpp)
+add_executable (wal_test ${HEADERS} WALTest.cpp)
 add_executable (skv_client_test ${HEADERS} SKVClientTest.cpp)
 
 target_link_libraries (k23si_test PRIVATE appbase Seastar::seastar k23si)
@@ -17,6 +18,7 @@ target_link_libraries (key_encoding_test PRIVATE dto transport)
 target_link_libraries (schema_creation_test PRIVATE appbase Seastar::seastar dto)
 target_link_libraries (skv_ser_test PRIVATE dto transport)
 target_link_libraries (3si_txn_test PRIVATE appbase dto transport Seastar::seastar)
+target_link_libraries (wal_test PRIVATE appbase dto transport log_stream plog_client k23si Seastar::seastar)
 target_link_libraries (skv_client_test PRIVATE tso_client k23si_client cpo_client appbase dto transport Seastar::seastar)
 
 add_test(NAME readcache COMMAND read_cache_test)
