add get partition unit test 1

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory (persistentVolume)
 add_subdirectory (transport)
 add_subdirectory (k23si)
 add_subdirectory (plog)
+add_subdirectory (dto)
