add get partition unit test 2

--- a/test/dto/CMakeLists.txt
+++ b/test/dto/CMakeLists.txt
@@ -3,4 +3,4 @@ file(GLOB SOURCES "*.cpp")
 
 add_executable (partition_test ${HEADERS} PartitionTest.cpp)
 
-target_link_libraries (partition_test PRIVATE appbase Seastar::seastar dto
+target_link_libraries (partition_test PRIVATE appbase Seastar::seastar dto k23si_client tso_client)
