--- a/src/k2/persistence/CMakeLists.txt
+++ b/src/k2/persistence/CMakeLists.txt
@@ -3,4 +3,4 @@ add_subdirectory (persistentVolume)
 add_subdirectory (service)
 add_subdirectory (plog_service)
 add_subdirectory (plog_client)
-add_subdirectory (logStream)
+add_subdirectory (logStreamMgr)
