--- a/src/k2/CMakeLists.txt
+++ b/src/k2/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory (config)
 add_subdirectory (cpo)
 add_subdirectory (dto)
 add_subdirectory (indexer)
+add_subdirectory (infrastructure)
 add_subdirectory (module)
 add_subdirectory (nodePoolMonitor)
 add_subdirectory (partitionManager)
