Add inspect keys to API server

--- a/src/k2/cmd/nodepool/CMakeLists.txt
+++ b/src/k2/cmd/nodepool/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable (nodepool nodepool_main.cpp)
 
-target_link_libraries (nodepool PRIVATE appbase common transport Seastar::seastar assignment_manager partition_manager node_pool_monitor collection_metadata_cache tso_client)
+target_link_libraries (nodepool PRIVATE appbase common transport Seastar::seastar assignment_manager partition_manager node_pool_monitor collection_metadata_cache tso_client infrastructure)
 
 install (TARGETS nodepool DESTINATION bin)
