bug fixes in push handling

--- a/src/k2/cmd/demo/CMakeLists.txt
+++ b/src/k2/cmd/demo/CMakeLists.txt
@@ -8,4 +8,4 @@ target_link_libraries (k2_demo_rpc_echo PRIVATE appbase transport common Seastar
 target_link_libraries (k2_demo_rpc_service PRIVATE appbase transport common Seastar::seastar)
 target_link_libraries (k2_demo_tso PRIVATE tso_service tso_client appbase transport common Seastar::seastar)
 
-install (TARGETS k2_demo_service k2_demo_rpc_echo k2_demo_rpc_service k2_demo_tso DESTINATION bin)
+#install (TARGETS k2_demo_service k2_demo_rpc_echo k2_demo_rpc_service k2_demo_tso DESTINATION bin)
