use libfmt for formatting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_compile_definitions(K2_DEBUG_LOGGING=${K2_DEBUG_LOGGING})
 include_directories(src)
 
 find_package (Seastar REQUIRED)
+find_package (fmt REQUIRED)
 find_package (yaml-cpp REQUIRED) # required for configuration file parsing
 
 add_subdirectory (src)
