fmt-based logging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,14 @@ project (k2_platform VERSION 0.0.1 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 add_compile_options(-O3 -g -Werror -Wall -Wextra -march=skylake -mtune=skylake-avx512 -mavx -mavx2 -mxsave -mbmi -mbmi2 -mlzcnt -maes -mpopcnt)
 
-# K2_DEBUG_LOGGING enables some verbose logging for debug purposes.
-if(DEFINED ENV{K2_DEBUG_LOGGING})
-    set(K2_DEBUG_LOGGING $ENV{K2_DEBUG_LOGGING})
+# K2_VERBOSE_LOGGING enables some verbose logging for debug purposes. By default it is disabled and compiled out
+if(DEFINED ENV{K2_VERBOSE_LOGGING})
+    set(K2_VERBOSE_LOGGING $ENV{K2_VERBOSE_LOGGING})
 else()
-    set(K2_DEBUG_LOGGING 0)
+    set(K2_VERBOSE_LOGGING 0)
 endif()
 
-add_compile_definitions(K2_DEBUG_LOGGING=${K2_DEBUG_LOGGING})
+add_compile_definitions(K2_VERBOSE_LOGGING=${K2_VERBOSE_LOGGING})
 
 include_directories(src)
 
