--- a/src/k2/common/CMakeLists.txt
+++ b/src/k2/common/CMakeLists.txt
@@ -1,20 +1,23 @@
 file(GLOB HEADERS "*.h")
 file(GLOB SOURCES "*.cpp")
 
+set(AUTOGEN_HEADER
+  "${CMAKE_CURRENT_SOURCE_DIR}/AutoGenFormattingUtils.h"
+)
+
 add_custom_command(
-  OUTPUT AutoGenFormattingUtils.h
-  COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/gen_macros.py > ${CMAKE_CURRENT_SOURCE_DIR}/AutoGenFormattingUtils.h
+  OUTPUT ${AUTOGEN_HEADER}
+  COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/gen_macros.py > ${AUTOGEN_HEADER}
   DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/gen_macros.py
 )
-add_custom_target(autogen_utils DEPENDS AutoGenFormattingUtils.h)
 
-add_library(common STATIC ${HEADERS} ${SOURCES} AutoGenFormattingUtils.h)
+add_library(common STATIC ${HEADERS} ${SOURCES} ${AUTOGEN_HEADER})
 
 set_target_properties(common PROPERTIES
     VERSION ${PROJECT_VERSION}
     SOVERSION 1
 )
-target_link_libraries (common PRIVATE Seastar::seastar fmt::fmt json)
+target_link_libraries (common PRIVATE Seastar::seastar fmt::fmt nlohmann_json::nlohmann_json)
 
 # export the library in the common k2Targets
 install(TARGETS common EXPORT k2Targets DESTINATION lib/k2)
