Remove partitionManager. Unregister handlers on module stop

--- a/src/k2/assignmentManager/CMakeLists.txt
+++ b/src/k2/assignmentManager/CMakeLists.txt
@@ -2,7 +2,7 @@ file(GLOB HEADERS "*.h")
 file(GLOB SOURCES "*.cpp")
 
 add_library(assignment_manager STATIC ${HEADERS} ${SOURCES})
-target_link_libraries (assignment_manager PRIVATE common transport Seastar::seastar dto partition_manager)
+target_link_libraries (assignment_manager PRIVATE common transport Seastar::seastar dto k23si)
 
 # export the library in the common k2Targets
 install(TARGETS assignment_manager EXPORT k2Targets DESTINATION lib/k2)
