Updated cluster scripts to automatically determine endpoints and parameters with variable number of hosts

--- a/cluster/configs/cluster.cfg
+++ b/cluster/configs/cluster.cfg
@@ -1,44 +1,47 @@
-[client]
-hosts = ${LocalConfig:CLIENT_HOST}
-cpus = 4
-configs = configs/tpcc_client.cfg configs/common.cfg
-
-[load]
-hosts = ${LocalConfig:CLIENT_HOST}
-cpus = 1
-configs = configs/tpcc_load.cfg configs/common.cfg
-
 [cpo]
-hosts = ${LocalConfig:CPO_HOST}
+hosts = 1
+host_config = A
 cpus = 1
 configs = configs/cpo.cfg configs/common.cfg
 
 [tso]
-hosts = ${LocalConfig:TSO_HOST}
+hosts = 1
+host_config = A
 cpus = 10
 configs = configs/tso.cfg configs/common.cfg
 
 [persist]
-hosts = ${LocalConfig:PERSIST_HOST}
+hosts = 1
+host_config = A
 cpus = 8
 configs = configs/persist.cfg configs/common.cfg
 
-[k2node]
-hosts = ${LocalConfig:SERVER_HOST}
+[nodepool]
+hosts = 2
+host_config = A
 cpus = 4
-configs = configs/k2_server.cfg configs/common.cfg
-
-[k2node2]
-hosts = ${LocalConfig:SERVER2_HOST}
-cpus = 4
-configs = configs/k2_server2.cfg configs/common.cfg
+configs = configs/nodepool.cfg configs/common.cfg
 
 [txnload]
-hosts = ${LocalConfig:CLIENT_HOST}
+hosts = 1
+host_config = A
 cpus = 1
 configs = configs/txnload.cfg configs/common.cfg
 
 [txnbench]
-hosts = ${LocalConfig:CLIENT_HOST}
+hosts = 1
+host_config = A
 cpus = 10
 configs = configs/txnbench.cfg configs/common.cfg
+
+[client]
+hosts = 1
+host_config = A
+cpus = 4
+configs = configs/tpcc_client.cfg configs/common.cfg
+
+[load]
+hosts = 1
+host_config = A
+cpus = 1
+configs = configs/tpcc_load.cfg configs/common.cfg
