--- a/cluster/configs/common.cfg
+++ b/cluster/configs/common.cfg
@@ -4,7 +4,7 @@ docker_args = --privileged --network=host -v "/dev/:/dev" -v "/sys/:/sys/" -w /u
 [program_args]
 hugepages=
 poll-mode=
-rdma = mlx5_0
+rdma = $$rdma
 cpuset = $$cpus_expand
 smp = $$cpus
 reactor-backend = epoll
