--- a/cluster/configs/cpo.cfg
+++ b/cluster/configs/cpo.cfg
@@ -1,11 +1,10 @@
 [deployment]
-image = ${LocalConfig:CPO_IMAGE}
+image = docker.mydomain.com/tpcc:latest
 binary = ./cpo_main
 
 [program_args]
-tcp_endpoints = 7000
+tcp_endpoints = $$my_endpoints
 data_dir = ./
 memory = 1G
-cpuset = 1
 heartbeat_deadline = 1s
 assignment_timeout = 10s
