--- a/cluster/configs/txnload.cfg
+++ b/cluster/configs/txnload.cfg
@@ -1,14 +1,12 @@
 [deployment]
-image = ${LocalConfig:CLIENT_IMAGE}
+image = docker.mydomain.com/tpcc:latest
 binary = ./k23sibench_client
 
 [program_args]
 test_duration = 120s
-#tcp_remotes = tcp+k2rpc://192.168.1.4:10000 tcp+k2rpc://192.168.1.2:10000 tcp+k2rpc://192.168.1.4:10001 tcp+k2rpc://192.168.1.2:10001
-tcp_remotes = tcp+k2rpc://192.168.1.4:10000 tcp+k2rpc://192.168.1.4:10001 tcp+k2rpc://192.168.1.4:10002 tcp+k2rpc://192.168.1.4:10003 tcp+k2rpc://192.168.1.2:10000 tcp+k2rpc://192.168.1.2:10001 tcp+k2rpc://192.168.1.2:10002 tcp+k2rpc://192.168.1.2:10003 
-#tcp_remotes = tcp+k2rpc://192.168.1.4:10000
-cpo = auto-rrdma+k2rpc://192.168.1.8:7000
-tso_endpoint = auto-rrdma+k2rpc://192.168.1.8:8000
+tcp_remotes = $$nodepool_endpoints
+cpo = $$cpo_endpoints
+tso_endpoint = $$tso_endpoints
 memory = 30G
 partition_request_timeout = 1s
 cpo_request_timeout = 5s
