add transaction weights to TPCC client

--- a/cluster/configs/tpcc_load.cfg
+++ b/cluster/configs/tpcc_load.cfg
@@ -4,7 +4,7 @@ binary = ./tpcc_client
 
 [program_args]
 test_duration_s = 30
-tcp_remotes = tcp+k2rpc://192.168.1.4:10000 tcp+k2rpc://192.168.1.4:10001 tcp+k2rpc://192.168.1.4:10002 tcp+k2rpc://192.168.1.4:10003 tcp+k2rpc://192.168.1.2:10000 tcp+k2rpc://192.168.1.2:10001 tcp+k2rpc://192.168.1.2:10002 tcp+k2rpc://192.168.1.2:10003 
+tcp_remotes = tcp+k2rpc://192.168.1.4:10000 tcp+k2rpc://192.168.1.4:10001 tcp+k2rpc://192.168.1.4:10002 tcp+k2rpc://192.168.1.4:10003 tcp+k2rpc://192.168.1.2:10000 tcp+k2rpc://192.168.1.2:10001 tcp+k2rpc://192.168.1.2:10002 tcp+k2rpc://192.168.1.2:10003
 #tcp_remotes = tcp+k2rpc://192.168.1.4:10000
 cpo = auto-rrdma+k2rpc://192.168.1.8:7000
 tso_endpoint = auto-rrdma+k2rpc://192.168.1.8:8000
@@ -16,3 +16,4 @@ data_load = true
 num_warehouses = 12
 num_concurrent_txns = 1
 do_verification = false
+txn_weights = "43,4,4,45,4"
