Fix bug in rpcbench

--- a/cluster/configs/cluster.cfg
+++ b/cluster/configs/cluster.cfg
@@ -37,7 +37,7 @@ configs = configs/txnbench.cfg configs/common.cfg
 [client]
 hosts = 1
 host_config = A
-cpus = 4
+cpus = 1
 configs = configs/tpcc_client.cfg configs/common.cfg
 
 [load]
@@ -45,3 +45,27 @@ hosts = 1
 host_config = A
 cpus = 1
 configs = configs/tpcc_load.cfg configs/common.cfg
+
+[netserver]
+hosts = 1
+host_config = B
+cpus = 5
+configs = configs/netserver.cfg configs/common.cfg
+
+[netclient]
+hosts = 1
+host_config = B
+cpus = 5
+configs = configs/netclient.cfg configs/common.cfg
+
+[rpcserver]
+hosts = 1
+host_config = A
+cpus = 10
+configs = configs/rpcserver.cfg configs/common.cfg
+
+[rpcclient]
+hosts = 1
+host_config = A
+cpus = 10
+configs = configs/rpcclient.cfg configs/common.cfg
