--- a/src/k2/cmd/persistence/CMakeLists.txt
+++ b/src/k2/cmd/persistence/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable (persistence persistence_main.cpp)
 
-target_link_libraries (persistence PRIVATE appbase common transport Seastar::seastar persistence_service)
+target_link_libraries (persistence PRIVATE cpo_client appbase common transport Seastar::seastar persistence_service)
 
 install (TARGETS persistence DESTINATION bin)
