--- a/test/k23si/CMakeLists.txt
+++ b/test/k23si/CMakeLists.txt
@@ -13,13 +13,13 @@ add_executable (query_test ${HEADERS} QueryTest.cpp)
 add_executable (expression_test ${HEADERS} ExpressionTest.cpp)
 add_executable (heartbeat_test ${HEADERS} HeartbeatTest.cpp)
 
-target_link_libraries (k23si_test PRIVATE appbase Seastar::seastar k23si)
+target_link_libraries (k23si_test PRIVATE appbase Seastar::seastar tso_client k23si)
 target_link_libraries (read_cache_test PRIVATE k23si)
 target_link_libraries (skv_record_test PRIVATE dto transport)
 target_link_libraries (key_encoding_test PRIVATE dto transport)
 target_link_libraries (schema_creation_test PRIVATE appbase Seastar::seastar dto)
 target_link_libraries (skv_ser_test PRIVATE dto transport)
-target_link_libraries (3si_txn_test PRIVATE appbase dto transport Seastar::seastar)
+target_link_libraries (3si_txn_test PRIVATE appbase dto transport tso_client Seastar::seastar)
 target_link_libraries (skv_client_test PRIVATE tso_client k23si_client cpo_client appbase dto transport Seastar::seastar)
 target_link_libraries (query_test PRIVATE tso_client k23si_client cpo_client appbase dto transport Seastar::seastar)
 target_link_libraries (expression_test PRIVATE dto transport Seastar::seastar)
