--- a/cluster/configs/cpo.cfg
+++ b/cluster/configs/cpo.cfg
@@ -6,5 +6,5 @@ binary = ./cpo_main
 tcp_endpoints = $$my_endpoints
 data_dir = ./
 memory = 1G
-heartbeat_deadline = 1s
+txn_heartbeat_deadline = 1s
 assignment_timeout = 10s
