--- a/test/k23si/CMakeLists.txt
+++ b/test/k23si/CMakeLists.txt
@@ -2,7 +2,7 @@ file(GLOB HEADERS "*.h")
 file(GLOB SOURCES "*.cpp")
 
 add_executable (k23si_test ${HEADERS} K23SITest.cpp)
-add_executable (read_cache_test ${HEADERS} ReadCacheTest.cpp)
+add_executable (indexer_test ${HEADERS} IndexerTest.cpp)
 add_executable (skv_record_test ${HEADERS} SKVRecordTest.cpp)
 add_executable (key_encoding_test ${HEADERS} KeyEncodingTest.cpp)
 add_executable (schema_creation_test ${HEADERS} SchemaCreationTest.cpp)
@@ -13,7 +13,7 @@ add_executable (query_test ${HEADERS} QueryTest.cpp)
 add_executable (expression_test ${HEADERS} ExpressionTest.cpp)
 
 target_link_libraries (k23si_test PRIVATE appbase Seastar::seastar tso_client k23si)
-target_link_libraries (read_cache_test PRIVATE k23si)
+target_link_libraries (indexer_test PRIVATE k23si dto Seastar::seastar)
 target_link_libraries (skv_record_test PRIVATE dto transport)
 target_link_libraries (key_encoding_test PRIVATE dto transport)
 target_link_libraries (schema_creation_test PRIVATE appbase Seastar::seastar dto)
@@ -23,7 +23,7 @@ target_link_libraries (skv_client_test PRIVATE tso_client k23si_client cpo_clien
 target_link_libraries (query_test PRIVATE tso_client k23si_client cpo_client appbase dto transport Seastar::seastar)
 target_link_libraries (expression_test PRIVATE dto transport Seastar::seastar)
 
-add_test(NAME readcache COMMAND read_cache_test)
+add_test(NAME readcache COMMAND indexer_test)
 add_test(NAME skv_record COMMAND skv_record_test)
 add_test(NAME key_encoding COMMAND key_encoding_test)
 add_test(NAME skv_ser COMMAND skv_ser_test)
