--- a/src/k2/cmd/CMakeLists.txt
+++ b/src/k2/cmd/CMakeLists.txt
@@ -7,4 +7,4 @@ add_subdirectory(plog)
 add_subdirectory(txbench)
 add_subdirectory(tso)
 add_subdirectory(ycsb)
-add_subdirectory(httpclient)
+add_subdirectory(httpproxy)
