Separate header from implementation

--- a/src/k2/CMakeLists.txt
+++ b/src/k2/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory (common)
 add_subdirectory (config)
 add_subdirectory (cpo)
 add_subdirectory (dto)
+add_subdirectory (httpproxy)
 add_subdirectory (indexer)
 add_subdirectory (infrastructure)
 add_subdirectory (module)
