--- a/src/k2/cmd/httpproxy/CMakeLists.txt
+++ b/src/k2/cmd/httpproxy/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable (http_proxy http_proxy_main.cpp)
 
-target_link_libraries (http_proxy PRIVATE appbase tso_client cpo_client k23si_client dto infrastructure Seastar::seastar)
+target_link_libraries (http_proxy PRIVATE appbase tso_client httpproxy Seastar::seastar)
 
 install (TARGETS http_proxy DESTINATION bin)
