--- a/src/SKVClient/src/client/CMakeLists.txt
+++ b/src/SKVClient/src/client/CMakeLists.txt
@@ -8,10 +8,19 @@ set_target_properties(client PROPERTIES
     SOVERSION 1
 )
 
-target_link_libraries (client PRIVATE common dto mpack)
+target_link_libraries (client PRIVATE common dto mpack httplib)
+
+add_executable (skvtester skvtest.cpp)
+target_link_libraries (skvtester PRIVATE common dto mpack httplib)
+
+add_executable (mpacktest mpacktest.cpp)
+target_link_libraries (mpacktest PRIVATE common mpack)
 
 # export the library in the common skvTargets
 install(TARGETS client EXPORT skvTargets DESTINATION lib/skv)
 install(FILES ${HEADERS} DESTINATION include/skv/client)
 # export the cmake config in the build tree for any users who want to use this project from source
 export(TARGETS client NAMESPACE skv:: FILE client-config.cmake)
+
+install (TARGETS skvtester DESTINATION bin)
+install (TARGETS mpacktest DESTINATION bin)
