fix binary string capture rename include paths

--- a/src/SKVClient/test/CMakeLists.txt
+++ b/src/SKVClient/test/CMakeLists.txt
@@ -1,5 +1,6 @@
 enable_testing()
 include_directories(include)
+add_compile_options(-fno-var-tracking)
 
 add_executable (mpack_test mpacktest.cpp)
 target_link_libraries (mpack_test PRIVATE mpack)
