--- a/src/SKVClient/src/CMakeLists.txt
+++ b/src/SKVClient/src/CMakeLists.txt
@@ -1,5 +1,1 @@
-add_subdirectory (client)
-add_subdirectory (common)
-add_subdirectory (dto)
-add_subdirectory (mpack)
-add_subdirectory (httplib)
+add_subdirectory(skv)
