Address PR comments

--- a/src/logging/CMakeLists.txt
+++ b/src/logging/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required (VERSION 3.13)
 project (yule VERSION 0.0.1 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-add_compile_options(-O3 -std=c++17 -g -Werror -Wall -Wextra)
+add_compile_options(-O3 -g -Werror -Wall -Wextra)
 
 # K2_VERBOSE_LOGGING enables some verbose logging for debug purposes. By default it is disabled and compiled out
 if(DEFINED ENV{K2_VERBOSE_LOGGING})
