--- a/src/skvhttpclient/CMakeLists.txt
+++ b/src/skvhttpclient/CMakeLists.txt
@@ -15,6 +15,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
 add_compile_options(-O3 -g -Werror -Wall -Wextra)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 include_directories(src)
 
