--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ find_package(Seastar REQUIRED)
 find_package(fmt REQUIRED)
 find_package(skvhttp REQUIRED)
 find_package(yule REQUIRED)
-find_package(Boost COMPONENTS thread system serialization REQUIRED)
+find_package(Boost COMPONENTS serialization REQUIRED)
 
 add_subdirectory (src)
 add_subdirectory (test)
